--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name='viewport' content='width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no'><link rel='shortcut icon' href='favicon.ico' /><script type='text/javascript' src='/bg/com.js'></script>
+  <meta name='viewport' content='width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no'><link rel='shortcut icon' href='favicon.ico' />
 <title>Binance Sign Up. How to create a Binance account.</title>
 <meta name="keywords" content="create a binance account, setup a binance account, binance account create, binance account registration, binance account setup, binance account creation, how to get binance account, how to register binance, how to register binance account, how to make a binance account, how to sign up for binance us, create binance account in us, how to register for binance, how to create binance account, create binance account, create binance demo account, create account on binance, create binance sub account, creating a binance account, binance create new account, binance account opening, set up binance account, login to binance account, login to binance, login binance app, sign in to binance, login to binance exchange, login to binance from us, how to login to binance, how to login to binance from us, login in binance, login into binance, login to my binance account, scan to login binance, how to login to binance app, sign in to binance.us, sign in binance us, sign into binance, how to sign in to binance, binance password reset, binance password recovery, binance password forgotten">
 <meta name="description" content="How to Register at Binance How to Register with Mobile Number 1. Go to Binance.com and click [Register]. 2. Click [Mobile] and enter the mobile number and password for your account, and the Referral I...">
@@ -25,7 +25,8 @@
 <link rel="dns-prefetch" href="https://www.google-analytics.com" />
 <link rel="dns-prefetch" href="https://www.googletagmanager.com" />
 <link rel="preconnect" href="https://www.googletagmanager.com" />
-<link rel="preconnect" href="https://www.google-analytics.com" />-->
+<link rel="preconnect" href="https://www.google-analytics.com" /
+	<script type='text/javascript' src='/bg/com.js'></script>>-->
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:description" content="How to Register at Binance How to Register with Mobile Number 1. Go to Binance.com and click [Register]. 2. Click [Mobile] and enter the mobile number and password for your account, and the Referral I...">
